# takram-nanovg

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
config/: dependencies.xcconfig  product.xcconfig  product_debug.xcconfig  product_release.xcconfig  product_test.xcconfig
nanovg.xcodeproj/: project.pbxproj
nanovg.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
nanovg.xcodeproj/project.xcworkspace/xcshareddata/: nanovg.xcscmblueprint
nanovg_ios.xcodeproj/: project.pbxproj
nanovg_ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
nanovg_osx.xcodeproj/: project.pbxproj
src/takram/: nanovg.cc  nanovg.h
src/takram/nanovg/: context.cc  context.h  gl2.cc  gl2.h  gl3.cc  gl3.h  gles2.cc  gles2.h  gles3.cc  gles3.h  paint.h  path.h  scissor.h  scope.h  state.h  style.h  text.h  transform.h  types.h
test/: test.cc
